<resources>
    <string name="app_name">Dictionary</string>
    <string name="object">object</string>
    <string name="french">FRENCH</string>
    <string name="english">ENGLISH</string>
    <string name="pro">pro</string>
    <string name="definition">Definition</string>
    <string name="definition1">Definition:</string>
    <string name="define">DEFINE</string>
    <string name="go_back">Go Back</string>
</resources>
